# vaulty

./: .gitignore  Cargo.toml  package-lock.json  package.json  readme.md
.github/workflows/: npm-publish.yml
npm/: package.json
scripts/: build.js  build.ts  postinstall.ts
src/: main.rs  types.rs
src/commands/: add.rs  delete.rs  init.rs  list.rs  mod.rs  pick.rs  save.rs
src/utils/: mod.rs  padding.rs  table.rs
