[package]
name = "vaulty"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
tabled = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0"
colored = "2.0"
md5 = "0.7.0"
inquire = "0.7.5"
terminal_size = "0.4.2"
arboard = "3.4.1"